[gd_scene load_steps=7 format=3 uid="uid://df5kgh4miheu4"]

[ext_resource type="Script" path="res://car.gd" id="1_ayagb"]
[ext_resource type="ArrayMesh" uid="uid://ke8hmg8luy8x" path="res://nissan_body.tres" id="2_isyt4"]
[ext_resource type="ArrayMesh" uid="uid://cpibg3o72jaa3" path="res://tire.tres" id="3_2k0nf"]
[ext_resource type="AudioStream" uid="uid://seecsmlxx45r" path="res://audio/car_idle.ogg" id="4_num1s"]

[sub_resource type="BoxShape3D" id="BoxShape3D_iltbk"]
size = Vector3(2.63335, 1.85, 6.33774)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_mgt6f"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath("FrontLeft:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:rotation")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath("BreakLights:visible")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath("BackLeft:rotation")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false
properties/5/path = NodePath("FrontRight:rotation")
properties/5/spawn = true
properties/5/sync = true
properties/5/watch = false

[node name="BlueCar" type="VehicleBody3D"]
collision_layer = 2
collision_mask = 5
mass = 80.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0, -1)
gravity_scale = 4.0
can_sleep = false
script = ExtResource("1_ayagb")

[node name="CarBody" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_isyt4")

[node name="FrontLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.13145, -0.4, 1.949)
use_as_steering = true
wheel_roll_influence = 0.01
wheel_radius = 0.4
wheel_rest_length = 0.2
wheel_friction_slip = 0.85
suspension_stiffness = 120.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="FrontLeft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0806, 0.378954, -1.92172)
mesh = ExtResource("3_2k0nf")
skeleton = NodePath("../../BackLeft")

[node name="FrontRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.12551, -0.4, 1.949)
use_as_steering = true
wheel_roll_influence = 0.01
wheel_radius = 0.4
wheel_rest_length = 0.2
wheel_friction_slip = 0.85
suspension_stiffness = 120.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D3" type="MeshInstance3D" parent="FrontRight"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.09333, 0.378954, 1.95171)
mesh = ExtResource("3_2k0nf")
skeleton = NodePath("../../BackLeft")

[node name="BackRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18883, -0.4, -1.63847)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_radius = 0.4
wheel_rest_length = 0.2
wheel_friction_slip = 1.5
suspension_travel = 0.15
suspension_stiffness = 100.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="BackLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.20084, -0.4, -1.63847)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_radius = 0.4
wheel_rest_length = 0.2
wheel_friction_slip = 1.5
suspension_travel = 0.15
suspension_stiffness = 100.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="BackLeft"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.23302, 0.378954, 1.92152)
mesh = ExtResource("3_2k0nf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BackLeft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14999, 0.378954, -1.95191)
mesh = ExtResource("3_2k0nf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0540192, 0.224373)
shape = SubResource("BoxShape3D_iltbk")

[node name="DebugLabel" type="Label3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.913921, 2.63379, -2.08489)
pixel_size = 0.0125
text = "Sample Text"
font_size = 24
horizontal_alignment = 0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_mgt6f")

[node name="FrontLights" type="Node3D" parent="."]

[node name="LeftLight" type="SpotLight3D" parent="FrontLights"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.947614, 0.113907, 3.20473)
light_color = Color(0.921569, 0.905882, 0.929412, 1)
light_energy = 11.112
shadow_enabled = true
shadow_bias = 0.5
spot_range = 11.8623
spot_angle = 23.4921

[node name="RightLight" type="SpotLight3D" parent="FrontLights"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.703996, 0.113907, 3.20473)
light_color = Color(0.921569, 0.905882, 0.929412, 1)
light_energy = 11.112
shadow_enabled = true
shadow_bias = 0.5
spot_range = 11.8623
spot_angle = 23.4921

[node name="BreakLights" type="Node3D" parent="."]

[node name="OmniLight3D" type="OmniLight3D" parent="BreakLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.892085, 0.362211, -2.84714)
light_color = Color(1, 0.454902, 0.372549, 1)
omni_range = 2.2539

[node name="OmniLight3D2" type="OmniLight3D" parent="BreakLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.619733, 0.291081, -2.84714)
light_color = Color(1, 0.454902, 0.372549, 1)
omni_range = 2.2539

[node name="OmniLight3D3" type="OmniLight3D" parent="BreakLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.896674, 0.362211, -2.84714)
light_color = Color(1, 0.454902, 0.372549, 1)
omni_range = 2.2539

[node name="OmniLight3D4" type="OmniLight3D" parent="BreakLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.633972, 0.291081, -2.84714)
light_color = Color(1, 0.454902, 0.372549, 1)
omni_range = 2.2539

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.25277)
stream = ExtResource("4_num1s")
volume_db = 2.0
unit_size = 15.0
max_db = 1.0
max_distance = 25.0

[node name="CameraPosition" type="Node3D" parent="."]
transform = Transform3D(-1, -1.20158e-08, 8.65931e-08, 0, 0.990509, 0.137445, -8.74228e-08, 0.137445, -0.990509, -0.077, 3.034, -7.604)

[node name="CameraPivot" type="Node3D" parent="CameraPosition"]
transform = Transform3D(-1, 3.10863e-14, -8.74228e-08, -1.20158e-08, 0.99051, 0.137445, 8.65931e-08, 0.137445, -0.99051, -0.0770007, -1.96007, -7.94884)
top_level = true

[node name="CenterOfMass" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
